syntax = "proto3";

package message;

option go_package = "./message";

message type {
    string type = 1;
}

// mjai连接时发送
message hello {
    string type = 1;
    string protocol = 2;
    int32 protocol_version = 3;
}

// mjai响应hello
message join {
    string type = 1;
    string name = 2;
    string room = 3;
}

// 告诉mjai游戏已经开始
message start_game {
    string type = 1;
    int32 id = 2;
    repeated string names = 3;
}

// 没有对应消息回应时发送
message none {
    string type = 1;
}

// 摸牌
message tsumo {
    string type = 1;
    int32 actor =2;
    string pai = 3;
}

// 打牌
message dahai {
    string type = 1;
    int32 actor = 2;
    string pai = 3;
    bool tsumogiri = 4;
}

// 碰牌
message pon {
    string type = 1;
    int32 actor = 2;
    int32 target = 3;
    string pai = 4;
    repeated string consumed = 5;
}

// 吃牌
message chi {
    string type = 1;
    int32 actor = 2;
    int32 target = 3;
    string pai = 4;
    repeated string consumed = 5;
}

// 加槓
message kakan {
    string type = 1;
    int32 actor = 2;
    string pai = 3;
    repeated string consumed = 4;
}

// 大明槓
message daiminkan {
    string type = 1;
    int32 actor = 2;
    int32 target = 3;
    string pai = 4;
    repeated string consumed = 5;
}

// 暗槓
message ankan {
    string type = 1;
    int32 actor = 2;
    repeated string consumed = 3;
}

// 立直宣告
message reach {
    string type = 1;
    int32 actor = 2;
}

// 立直结果
message reach_accepted {
    string type = 1;
    int32 actor = 2;
    repeated int32 deltas = 3;
    repeated int32 scores = 4;
}

// {"type":"hora","actor":2,"target":2,"pai":"2m","uradora_markers":["8p"],"hora_tehais":["1m","3m","5m","6m","7m","1p","2p","3p","4p","5pr","6p","W","W","2m"],"yakus":[["akadora",1],["reach",1],["menzenchin_tsumoho",1]],"fu":30,"fan":3,"hora_points":4000,"deltas":[-2100,-1100,6300,-1100],"scores":[25900,21900,29300,22900]}

// 自摸
message hora {
    string type = 1;
    int32 actor = 2;
    int32 target = 3;
    string pai = 4;
    repeated string uradora_markers = 5;
    repeated string hora_tehais = 6;
    repeated string yakus = 7;
    int32 fu = 8;
    int32 fan = 9;
    int32 hora_points = 10;
    repeated int32 deltas = 11;
    repeated int32 scores = 12;
}

// 结束
message end_kyoku {
    string type = 1;
}

// {"type":"ryukyoku","reason":"fanpai","tehais":[["5m","5m","5mr","3s","3s","N","N"],["?","?","?","?","?","?","?","?","?","?","?","?","?"],["?","?","?","?","?","?","?","?","?","?","?","?","?"],["?","?","?","?"]],"tenpais":[true,false,false,false],"deltas":[3000,-1000,-1000,-1000],"scores":[28000,24000,24000,24000]}

// 流局
message ryukyoku {
    string type = 1;
    string reason = 2;
    repeated string tehais = 3;
    repeated bool tenpais = 4;
    repeated int32 deltas = 5;
    repeated int32 scores = 6;
}

service Service {
    rpc onNew(none) returns (hello);
    rpc hello(join) returns (start_game);
    rpc round(none) returns (start_kyoku);
    rpc tsumo(tsumo) returns (tsumo);

}
